test/conformance/chainsaw/generate/clusterpolicy/standard/clone/sync/cpol-clone-sync-modify-downstream-apply/editeddownstream.yaml
apiVersion: v1
data:
  foo: bm90YmFjaGhlcmU=
  foo2: bm90YmFjaGhlcmU=
kind: Secret
metadata:
  name: regcred
  namespace: myfoons
type: Opaque
