test/conformance/chainsaw/generate/clusterpolicy/standard/clone/sync/cpol-clone-sync-modify-downstream-apply/03-modifydownstream.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: modifydownstream
spec:
  timeouts: {}
  try:
  - apply:
      file: editeddownstream.yaml
  - assert:
      file: finalsecret.yaml
