test/conformance/chainsaw/generate/clusterpolicy/standard/clone/sync/cpol-clone-sync-modify-downstream-apply/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: cpol-clone-sync-modify-downstream-apply
spec:
  concurrent: false
  steps:
  - name: step-00
    try:
    - sleep:
        duration: 3s
  - name: step-01
    try:
    - apply:
        file: permissions.yaml
  - name: create policy
    use:
      template: ../../../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: cpol-clone-sync-modify-downstream-apply
  - name: step-02
    try:
    - apply:
        file: ns.yaml
    - assert:
        file: cloned.yaml
  - name: step-03
    try:
    - apply:
        file: editeddownstream.yaml
    - assert:
        file: finalsecret.yaml
